# j3Term

./: README.md
src/: .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.txt  about.txt  build.rs  build_release.py
src/LICENSES/: Apache-2.0-LLVM-exception.txt  Apache-2.0.txt  OFL-1.1.txt  README.md  Unicode-3.0.txt  Zlib.txt
src/docs/: domain.md  menu-validation.md
src/src/: app.rs  domain.rs  entry.rs  error.rs  main.rs
src/src/domain/: appearance.rs  command.rs  identity.rs  input.rs  layout.rs  license.rs  session.rs  terminal.rs
src/src/infra/: config.rs  distribution.rs  gtk.rs  linux_desktop.rs  mod.rs  pty.rs  renderer.rs  terminal.rs  win32.rs
src/src/infra/pty/: event_queue.rs  process.rs  shell.rs  worker.rs
src/src/infra/win32/: clipboard.rs  controls.rs  dialogs.rs  dispatch.rs  input.rs  menus.rs  resources.rs  windowing.rs
