[package]
name = "j3term"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
alacritty_terminal = "0.26.0"
portable-pty = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.11.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Controls", "Win32_UI_Controls_Dialogs", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_System_Com"] }

[build-dependencies]
winresource = { version = "0.1.31", default-features = false }
